--- a/index.html
+++ b/index.html
@@ -24,11 +24,19 @@ description: Modern Multiplatform Game Engine written in Kotlin
 		<h1 class="editable">Modern Multiplatform Game Engine <strong>for Kotlin</strong></h1>
 		<p class="subtext editable">Write games for the JVM, JavaScript, Android and iOS in no time using Kotlin.</p>
 		<div class="cta">
-			<div class="button alt">
-				<a href="https://github.com/korlibs/korge-hello-world/archive/master.zip" style="display:inline-block">
-					<i class="fas fa-download"></i> Download Project Template
-				</a>
+			<div>
+				<div class="button alt" style="display: inline-block">
+					<a href="https://github.com/korlibs/korge-hello-world/archive/master.zip" style="display:inline-block">
+						<i class="fas fa-download"></i> Download Template
+					</a>
+				</div>
+				<div class="button alt" style="display: inline-block">
+					<a href="https://korlibs.soywiz.com/korge/setup/intellij-plugin/" style="display:inline-block">
+						<i class="fas fa-rocket"></i> Setup IntelliJ plugin
+					</a>
+				</div>
 			</div>
+
 			<div style="margin-top: 1em;">
 				<!-- Place this tag where you want the button to render. -->
 				<a class="github-button" href="https://github.com/korlibs/korge" data-size="large" data-show-count="true" aria-label="Star korlibs/korge on GitHub">Star</a>
@@ -122,6 +130,11 @@ description: Modern Multiplatform Game Engine written in Kotlin
 </section>
 
 <div class="content">
+	<section>
+		<div class="container flex">
+			<a class="twitter-timeline" href="https://twitter.com/KorgeGameEngine?ref_src=twsrc%5Etfw">Tweets by KorgeGameEngine</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		</div>
+	</section>
 	<section>
 		<div class="container flex">
 			<div class="text editable">
