Add dokka+youtube and adjust twitter size

--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@ description: Modern Multiplatform Game Engine written in Kotlin
 <div class="content">
 	<section>
 		<div class="container flex">
-			<a class="twitter-timeline" href="https://twitter.com/KorgeGameEngine?ref_src=twsrc%5Etfw">Tweets by KorgeGameEngine</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			<a class="twitter-timeline" data-width="512" data-max-width="100%" data-height="400" data-max-height="100vh" href="https://twitter.com/KorgeGameEngine?ref_src=twsrc%5Etfw">Tweets by KorgeGameEngine</a>
+			<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
 	</section>
 	<section>
