--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 layout: default
 ---
 
+{% include carousel.html %}
+
 {% include features.html %}
 
 {% include showcases.html %}
 
 {% include testimonials.html %}
 
+{% comment %}
 {% include faq.html %}
+{% endcomment %}
 
 {% include team.html %}
 
