Reworked features. Split off Kotlin. Features only display LEARN MORE when permalink is added

--- a/_carousel/korge.html
+++ b/_carousel/korge.html
@@ -3,10 +3,12 @@ title: KorGE
 image: assets/images/slider/korge.svg
 order: 0
 buttons:
-- title: Get Stated
+- title: Get Started
   link: https://korlibs.soywiz.com/korge/setup/
-- title: Download
-  link: #
+- title: Hello World
+  link: https://github.com/korlibs/korge-hello-world/archive/master.zip
+- title: Setup
+  link: https://korlibs.soywiz.com/korge/setup/intellij-plugin/
 ---
 
 <!-- Place this tag where you want the button to render. -->
