--- a/_carousel/korge.html
+++ b/_carousel/korge.html
@@ -5,10 +5,8 @@ order: 0
 buttons:
 - title: Get Started
   link: https://korlibs.soywiz.com/korge/setup/
-- title: Hello World
+- title: '"Hello World!"'
   link: https://github.com/korlibs/korge-hello-world/archive/master.zip
-- title: Setup
-  link: https://korlibs.soywiz.com/korge/setup/intellij-plugin/
 ---
 
 <!-- Place this tag where you want the button to render. -->
