reduced size of mascot

--- a/_carousel/korge.html
+++ b/_carousel/korge.html
@@ -1,6 +1,6 @@
 ---
 title: KorGE
-image: assets/images/slider/korge.svg
+image: assets/images/slider/mascot_transparent.png
 order: 0
 buttons:
 - title: Get Started
@@ -12,10 +12,12 @@ buttons:
 <!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/korlibs/korge" data-size="large" data-show-count="true" aria-label="Star korlibs/korge on GitHub">Star</a>
 
+
 <!-- Place this tag in your head or just before your close body tag. -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 
 <p class="text">Modern Multiplatform Game Engine for Kotlin.<br />
+
 					Latest version: <span id="version"></span></p>
 
 					<script type="text/javascript">
