--- a/_carousel/korge.html
+++ b/_carousel/korge.html
@@ -1,6 +1,6 @@
 ---
 title: KorGE
-image: assets/images/slider/mascot_transparent.png
+image: assets/images/slider/korgeUfo.svg
 order: 0
 buttons:
 - title: Get Started
