--- a/_carousel/korge.html
+++ b/_carousel/korge.html
@@ -4,7 +4,7 @@ image: assets/images/slider/korgeUfo.svg
 order: 0
 buttons:
 - title: Get Started
-  link: https://korlibs.soywiz.com/korge/setup/
+  link: https://korlibs.soywiz.com/korge/gettingstarted/
 - title: '"Hello World!"'
   link: https://github.com/korlibs/korge-hello-world/archive/master.zip
 ---
