--- a/_carousel/korge.html
+++ b/_carousel/korge.html
@@ -7,8 +7,8 @@ buttons:
   link: https://korlibs.soywiz.com/korge/gettingstarted/
 - title: '"Hello World!"'
   link: https://github.com/korlibs/korge-hello-world/archive/master.zip
-- title: '<iframe frameborder="none" width="245px" height="48px" src="https://plugins.jetbrains.com/embeddable/install/9676"></iframe>'
-  link: '#'
+extra:
+  - '<iframe frameborder="none" style="margin-top:0.5em;" width="245px" height="48px" src="https://plugins.jetbrains.com/embeddable/install/9676"></iframe>'
 ---
 
 <!-- Place this tag where you want the button to render. -->
