--- a/_carousel/korge.html
+++ b/_carousel/korge.html
@@ -1,6 +1,6 @@
 ---
 title: KorGE
-image: assets/images/slider/korge.svg
+image: assets/images/slider/mascots-pose1-base.webp
 order: 0
 buttons:
 - title: Get Started
