--- a/_carousel/korge.html
+++ b/_carousel/korge.html
@@ -1,6 +1,7 @@
 ---
 title: KorGE
 image: assets/images/slider/mascots-pose1-base.webp
+image_style: "filter: brightness(1.2)"
 order: 0
 buttons:
 - title: Get Started
