--- a/_carousel/korge.html
+++ b/_carousel/korge.html
@@ -5,7 +5,7 @@ image_style: "filter: brightness(1.2)"
 order: 0
 buttons:
 - title: Get Started
-  link: https://docs.korge.org/korge/gettingstarted/
+  link: https://docs.korge.org/getting-started/
 - title: '"Hello World!"'
   link: https://github.com/korlibs/korge-hello-world/archive/main.zip
 extra:
