--- a/_carousel/korge.html
+++ b/_carousel/korge.html
@@ -115,7 +115,7 @@ order: 0
                                 </button>
                             </figcaption>
                             <pre id="cmd-script" class="language-bash" style="padding:8px;color:white;"><code
-                                    class="language-bash">curl -sLO https://forge.korge.org/install-korge-forge.cmd && install-korge-forge.cmd</code></pre>
+                                    class="language-bash">%USERPROFILE%/Downloads" & curl -sLO https://forge.korge.org/install-korge-forge.cmd && install-korge-forge.cmd</code></pre>
                         </figure>
                     </div>
                     <div class="tab-pane" style="padding:8px;" id="unix" role="tabpanel"
@@ -131,7 +131,7 @@ order: 0
                                 </button>
                             </figcaption>
                             <pre id="bash-script" class="language-bash" style="padding:8px;color:white;"><code
-                                    class="language-bash">curl -fsSLO https://forge.korge.org/install-korge-forge.sh && chmod +x install-korge-forge.sh && ./install-korge-forge.sh</code></pre>
+                                    class="language-bash">cd "$HOME/Downloads"; curl -fsSLO https://forge.korge.org/install-korge-forge.sh && chmod +x install-korge-forge.sh && ./install-korge-forge.sh</code></pre>
                         </figure>
                     </div>
                 </div>
