--- a/.11ty/.includes/feature_list.html
+++ b/.11ty/.includes/feature_list.html
@@ -15,7 +15,7 @@
                     <div class="features-title-icon d-flex justify-content-between">
                         <h4 class="features-title"><a href="{{ feature.url | absolute_url }}">{{ feature.data.title | safe }}</a></h4>
                         <div class="features-icon">
-                            <i class="lni {{ feature.data.koricon }}"></i>
+                            <i class="lni {{ feature.data.icon }}"></i>
                             <img class="shape" src="{{ 'assets/images/f-shape-1.svg' | absolute_url }}" alt="Shape">
                         </div>
                     </div>
