--- a/index.html
+++ b/index.html
@@ -30,12 +30,7 @@ permalink: /
                                     <p class="text">Modern Multiplatform Game Engine for Kotlin.<br />
                                     <h3 style="color: #ffffff"><span id="version" ></span></h3></p>
                                 </p>
-                                <div style="opacity:0.75;">
-                                    <ul class="slider-btn rounded-buttons">
-                                        <li><a class="main-btn rounded-one" href="https://docs.korge.org/getting-started/" target="_blank">Get Started</a></li>
-                                        <li><a class="main-btn rounded-two" href="https://github.com/korlibs/korge-hello-world/archive/main.zip" target="_blank">"Hello World!"</a></li>
-                                    </ul>
-                                </div>
+                                {% include "install_korge_forge.html" %}
                             </div>
                         </div>
                     </div>
@@ -155,7 +150,7 @@ permalink: /
             </div>
         </div>
         <div class="row justify-content-center">
-		    <iframe src="https://show.korge.org/" style="width: 100vw;height: 600px; min-height: 50vh;border:0;padding:0;margin:0;" allowfullscreen referrerpolicy=origin ></iframe>
+		    <iframe src="https://show.korge.org/#DungeonScene" style="width: 100vw;height: 600px; min-height: 50vh;border:0;padding:0;margin:0;" allowfullscreen referrerpolicy=origin ></iframe>
         </div>
     </div>
 </section>
