--- a/index.html
+++ b/index.html
@@ -186,23 +186,25 @@ permalink: /
     }
 </style>
 
-<section id="showcases" class="portfolio-area portfolio-four pb-100">
+{% for page in collections.highlights %}
+<section id="highlight-{{ page.fileSlug }}" class="portfolio-area portfolio-four pb-100">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6 col-md-10">
                 <div class="section-title text-center pb-10">
-                    <h3 class="title"><a href="https://www.twitch.tv/jobegamedev" target="_blank">Jobe's Legacy</a></h3>
+                    <h3 class="title"><a href="{{ page.data.targetLink }}" target="_blank">{{ page.data.title }}</a></h3>
                     <p class="text">
-                        Have a look to a stream about a game development done in KorGE!
+                        {{ page.data.description }}
                     </p>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 56.25%;"><iframe src="https://player.twitch.tv/?channel=jobegamedev&autoplay=false&parent=korge.org&parent=127.0.0.1&parent=localhost" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen scrolling="no" allow="encrypted-media;"></iframe></div>
+            {{ page.content | safe }}
         </div>
     </div>
 </section>
+{% endfor %}
 
 
 {% include "feature_list.html" %}
