--- a/index.html
+++ b/index.html
@@ -139,9 +139,8 @@ permalink: /
 <section id="action">
     <div class="container-flex">
         <div class="row justify-content-center">
-            <div style="margin:1em;">
-                <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?serve=CWYI42JM&placement=korgeorg" id="_carbonads_js"></script>
-            </div>
+            <!-- ADS SLOT -->
+            <!-- <div style="margin:1em;"></div> -->
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-6 col-md-10">
