--- a/.11ty/.includes/install_korge_forge.html
+++ b/.11ty/.includes/install_korge_forge.html
@@ -94,7 +94,7 @@
                                     </figcaption>
                                     <pre id="cmd-script" class="language-bash"
                                         style="padding:8px;color:white;"><code
-                                        class="language-bash">cd %USERPROFILE%/Downloads" & curl -sLO https://forge.korge.org/install-korge-forge.cmd && install-korge-forge.cmd</code></pre>
+                                        class="language-bash">cd "%USERPROFILE%/Downloads" & curl -sLO https://forge.korge.org/install-korge-forge.cmd && install-korge-forge.cmd</code></pre>
                                 </figure>
                             </div>
                             <div class="tab-pane" style="padding:8px;" id="unix" role="tabpanel"
